<?xml version="1.0"?>
<package>
  <name>ur5_description</name>
  <version>0.0.0</version>
  <description>
      URDF description for Universal UR5 robot arms
  </description>

  <maintainer email="willie5588912@gmail.com">Wei Shih</maintainer>

  <license>TODO</license>

  <url type="website">http://ros.org/wiki/ur_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
