<?xml version="1.0"?>
<package>
  <name>ur5_hardware_interface</name>
  <version>0.0.0</version>
  <description>The ur5_hardware_interface package</description>

  <maintainer email="willie@todo.todo">willie</maintainer>

  <license>BSD</license>

  <author email="willie5588912@gmail.com">Wei Shih</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
